# Common-Metadata-Repository

./: .editorconfig  .gitignore  .mailmap  .replit  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Clojure REPL  DELETEME  DEVELOPERS_GUIDE.md  Dockerfile  Generics.md  LICENSE  Procfile  README.md  ROADMAP.md  api_docs.md  build.sh  codecov.yml  compose.yaml  contributor-stats.json  create-cmr-umbrella.sh  docker-compose.yml  extract-all-projects.sh  extract-cli.sh  extract-project.sh  functions.sh  global_versions.clj  holdings.json  junk.xml  nohup.out  package.json  partnertest_holdings.json  pom.xml  project.clj  scratch.clj  split-repos.sh  testbed_holdings.json  tests.defaults.edn  (+3 more)
.clj-kondo/: config.edn
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
OtherSchemas/: .editorconfig  README.md
access-control-app/: .gitignore  Dockerfile  Procfile  README.md  acl_schema.md  acl_usage.md  api_docs.md  build-access-control-for-container.sh  project.clj  tests.edn
acl-lib/: README.md  project.clj  tests.edn
andy-stuff/: How-To Add a Parameter.md  cmr-queries  collections.sh  granules.sh  ingest-collections.sh  ingest-granules.sh  ingest.sh  junk.txt
apps/: bootstrap-app  index-set-app
aurora-postgres-lib/: project.clj
autocomplete-suggest/: .eslintrc  .gitignore  README.md  package.json  (+4 more)
search-proxy/: Dockerfile  lanes.json  pyproject.toml
search-proxy/src/proxy/: app.py  cache.py  classifier.py  config.py  lanes.py
search-proxy/test/: conftest.py  test_app.py  test_cache.py  test_classifier.py  test_config.py  test_lanes.py
(+8136 files in other folders)
